--- a/tinydb.bib
+++ b/tinydb.bib
@@ -910,13 +910,6 @@ target parsing models.},
  year = {2010}
 }
 
-@inproceedings{koo-EtAl:2010:EMNLP,
- author = {Koo, Terry  and  Rush, Alexander M.  and  Collins, Michael  and  Jaakkola, Tommi  and  Sontag, David},
- booktitle = {Proc. of EMNLP},
- title = {Dual Decomposition for Parsing with Non-Projective Head Automata},
- year = {2010}
-}
-
 @inproceedings{kuhlmann-gomezrodriguez-satta:2011:ACL-HLT2011,
  author = {Kuhlmann, Marco  and  G\'{o}mez-Rodr\'{i}guez, Carlos  and  Satta, Giorgio},
  booktitle = {Proc. of ACL},
@@ -1218,6 +1211,17 @@ target parsing models.},
  year = {2004}
 }
 
+@incollection{NIPS2014_5346,
+ author = {Sutskever, Ilya and Vinyals, Oriol and Le, Quoc V},
+ booktitle = {Advances in Neural Information Processing Systems 27},
+ editor = {Z. Ghahramani and M. Welling and C. Cortes and N. D. Lawrence and K. Q. Weinberger},
+ link = {http://papers.nips.cc/paper/5346-sequence-to-sequence-learning-with-neural-networks.pdf},
+ pages = {3104--3112},
+ publisher = {Curran Associates, Inc.},
+ title = {Sequence to Sequence Learning with Neural Networks},
+ year = {2014}
+}
+
 @inproceedings{nivre-EtAl:2006:CoNLL-X,
  author = {Nivre, Joakim  and  Hall, Johan  and  Nilsson, Jens  and  Eryi{\v g}it, G{\"u}l{\c s}en  and  Marinov, Svetoslav},
  booktitle = {Proc. of CoNLL},
@@ -1327,14 +1331,6 @@ target parsing models.},
  year = {2002}
 }
 
-@inproceedings{papineni-EtAl:2002:ACL,
- author = {Kishore Papineni  and  Salim Roukos  and  Todd Ward  and  Wei-Jing Zhu},
- booktitle = {Proc. of ACL},
- doi = {10.3115/1073083.1073135},
- title = {Bleu: a Method for Automatic Evaluation of Machine Translation},
- year = {2002}
-}
-
 @inproceedings{passos-kumar-mccallum:2014:W14-16,
  author = {Passos, Alexandre  and  Kumar, Vineet  and  McCallum, Andrew},
  booktitle = {Proc. of CoNLL},
@@ -1367,17 +1363,6 @@ target parsing models.},
 @inproceedings{PETROV12.274.L12-1115,
  author = {Slav Petrov and Dipanjan Das and Ryan McDonald},
  booktitle = {Proc. of LREC},
- editor = {Nicoletta Calzolari and Khalid Choukri and Thierry Declerck and Mehmet U\u{g}ur Do\u{g}an and Bente Maegaard and Joseph Mariani and Jan Odijk and Stelios Piperidis},
- isbn = {978-2-9517408-7-7},
- language = {English},
- note = {ACL Anthology Identifier: L12-1115},
- title = {A Universal Part-of-Speech Tagset},
- year = {2012}
-}
-
-@inproceedings{PETROV12.274.L12-1115,
- author = {Slav Petrov and Dipanjan Das and Ryan McDonald},
- booktitle = {Proc. of LREC-2012},
  editor = {Nicoletta Calzolari and Khalid Choukri and Thierry Declerck and Mehmet U\u{g}ur Do\u{g}an and Bente Maegaard and Joseph Mariani and Jan Odijk and Stelios Piperidis},
  isbn = {978-2-9517408-7-7},
  language = {English},
@@ -1827,13 +1812,6 @@ and Dayan, Peter},
 @inproceedings{yijia-EtAl:2012:CLP2012,
  author = {Yijia, Liu  and  Meishan, Zhang  and  Wanxiang, Che  and  Ting, Liu  and  Yihe, Deng},
  booktitle = {Proc. of CIPS-SIGHAN},
- title = {Micro blogs Oriented Word Segmentation System},
- year = {2012}
-}
-
-@inproceedings{yijia-EtAl:2012:CLP2012,
- author = {Yijia, Liu  and  Meishan, Zhang  and  Wanxiang, Che  and  Ting, Liu  and  Yihe, Deng},
- booktitle = {Proc. of the Second CIPS-SIGHAN Joint Conference on Chinese Language Processing},
  title = {Micro blogs Oriented Word Segmentation System},
  year = {2012}
 }
