--- a/tinydb.bib
+++ b/tinydb.bib
@@ -13,7 +13,7 @@
 
 @inproceedings{alberti-EtAl:2015:EMNLP,
  author = {Alberti, Chris  and  Weiss, David  and  Coppola, Greg  and  Petrov, Slav},
- booktitle = {Proc. of EMNLP-2015},
+ booktitle = {Proc. of EMNLP},
  title = {Improved Transition-Based Parsing and Tagging with Neural Networks},
  year = {2015}
 }
@@ -95,14 +95,14 @@
 
 @inproceedings{bohnet-EtAl:2010:PAPERS,
  author = {Bohnet, Bernd  and  Wanner, Leo  and  Mill, Simon  and  Burga, Alicia},
- booktitle = {Coling-2010},
+ booktitle = {Proc. of Coling},
  title = {Broad Coverage Multilingual Deep Sentence Generation with a Stochastic Multi-Level Realizer},
  year = {2010}
 }
 
 @inproceedings{bohnet-kuhn:2012:EACL2012,
  author = {Bohnet, Bernd  and  Kuhn, Jonas},
- booktitle = {EACL-2012},
+ booktitle = {Proc. of EACL},
  title = {The Best of Both Worlds -- A Graph-based Completion Model for Transition-based Parsers},
  year = {2012}
 }
@@ -159,14 +159,14 @@
 
 @inproceedings{chang-han:2010:EMNLP,
  author = {Chang, Baobao  and  Han, Dongxu},
- booktitle = {EMNLP-2010},
+ booktitle = {Proc. of EMNLP},
  title = {Enhancing Domain Portability of Chinese Segmentation Model Using Chi-Square Statistics and Bootstrapping},
  year = {2010}
 }
 
 @inproceedings{charniak-johnson:2005:ACL,
  author = {Charniak, Eugene  and  Johnson, Mark},
- booktitle = {ACL-2005},
+ booktitle = {Proc. of ACL},
  doi = {10.3115/1219840.1219862},
  title = {Coarse-to-Fine n-Best Parsing and MaxEnt Discriminative Reranking},
  year = {2005}
@@ -174,7 +174,7 @@
 
 @inproceedings{chen-manning:2014:EMNLP2014,
  author = {Chen, Danqi  and  Manning, Christopher},
- booktitle = {Proc. of EMNLP-2014},
+ booktitle = {Proc. of EMNLP},
  title = {A Fast and Accurate Dependency Parser using Neural Networks},
  year = {2014}
 }
@@ -230,7 +230,7 @@
 
 @inproceedings{collins:2002:EMNLP02,
  author = {Michael Collins},
- booktitle = {EMNLP-2002},
+ booktitle = {Proc. of EMNLP},
  doi = {10.3115/1118693.1118694},
  title = {Discriminative Training Methods for Hidden Markov Models: Theory and Experiments with Perceptron Algorithms},
  year = {2002}
@@ -269,8 +269,7 @@
 
 @inproceedings{daume05search,
  author = {Hal {Daum\'e III} and John Langford and Daniel Marcu},
- booktitle = {NIPS Workshop on Advances in Structured Learning for Text and Speech
-Processing (ASLTSP)},
+ booktitle = {NIPS Workshop on ASLTSP},
  title = {Search-Based Structured Prediction as Classification},
  year = {2005}
 }
@@ -280,10 +279,9 @@ Processing (ASLTSP)},
  author = {Daum{\'e III}, Hal and Langford, John and Marcu, Daniel},
  doi = {10.1007/s10994-009-5106-x},
  issn = {0885-6125},
- issue_date = {June      2009},
+ issue_date = {June 2009},
  journal = {Machine Learning},
  keyword = {Reductions, Search, Structured prediction},
- month = {jun},
  number = {3},
  title = {Search-based Structured Prediction},
  volume = {75},
@@ -726,7 +724,7 @@ adopts a sequence-to-sequence autoencoder to perform this task.  Experimental
 results on three different datasets  show that our method achieves better
 performance than state-of-the-art methods.},
  author = {Gui, Tao  and  Zhang, Qi  and  Huang, Haoran  and  Peng, Minlong  and  Huang, Xuanjing},
- booktitle = {Proc. of EMNLP-2017},
+ booktitle = {Proc. of EMNLP},
  link = {https://www.aclweb.org/anthology/D17-1256},
  publisher = {ACL},
  title = {Part-of-Speech Tagging for Twitter with Adversarial Neural Networks},
@@ -818,7 +816,7 @@ target parsing models.},
 
 @inproceedings{huang-fayong-guo:2012:NAACL-HLT,
  author = {Huang, Liang  and  Fayong, Suphan  and  Guo, Yang},
- booktitle = {NAACL-2012},
+ booktitle = {Proc. of NAACL},
  title = {Structured Perceptron with Inexact Search},
  year = {2012}
 }
@@ -832,7 +830,7 @@ target parsing models.},
 
 @inproceedings{huang:2008:ACLMain,
  author = {Huang, Liang},
- booktitle = {ACL-2008},
+ booktitle = {Proc. of ACL},
  title = {Forest Reranking: Discriminative Parsing with Non-Local Features},
  year = {2008}
 }
@@ -860,16 +858,15 @@ target parsing models.},
 
 @inproceedings{kazama-torisawa:2008:ACLMain,
  author = {Kazama, Jun'ichi  and  Torisawa, Kentaro},
- booktitle = {Proc. of ACL-08: HLT},
+ booktitle = {Proc. of ACL},
  title = {Inducing Gazetteers for Named Entity Recognition by Large-Scale Clustering of Dependency Relations},
  year = {2008}
 }
 
 @inproceedings{kim-rush:2016:EMNLP2016,
  author = {Kim, Yoon  and  Rush, Alexander M.},
- booktitle = {Proc. of EMNLP-2016},
+ booktitle = {Proc. of EMNLP},
  link = {https://aclweb.org/anthology/D16-1139},
- publisher = {ACL},
  title = {Sequence-Level Knowledge Distillation},
  year = {2016}
 }
@@ -958,7 +955,7 @@ target parsing models.},
 
 @inproceedings{le-zuidema:2014:EMNLP2014,
  author = {Le, Phong  and  Zuidema, Willem},
- booktitle = {Proc. of EMNLP-2014},
+ booktitle = {Proc. of EMNLP},
  title = {The Inside-Outside Recursive Neural Network model for Dependency Parsing},
  year = {2014}
 }
@@ -1113,7 +1110,7 @@ target parsing models.},
 
 @inproceedings{martins-EtAl:2011:EMNLP1,
  author = {Martins, Andre  and  Smith, Noah  and  Figueiredo, Mario  and  Aguiar, Pedro},
- booktitle = {EMNLP-2011},
+ booktitle = {Proc. of EMNLP},
  title = {Dual Decomposition with Many Overlapping Components},
  year = {2011}
 }
@@ -1231,7 +1228,7 @@ target parsing models.},
 
 @inproceedings{nivre-EtAl:2007:EMNLP-CoNLL2007,
  author = {Nivre, Joakim  and  Hall, Johan  and  K\"ubler, Sandra  and  McDonald, Ryan  and  Nilsson, Jens  and  Riedel, Sebastian  and  Yuret, Deniz},
- booktitle = {Proc. of the CoNLL Shared Task Session of EMNLP-CoNLL 2007},
+ booktitle = {Proc. of CoNLL},
  title = {The {CoNLL} 2007 Shared Task on Dependency Parsing},
  year = {2007}
 }
@@ -1399,7 +1396,7 @@ Based on the evaluation of 50.000 LSTM-networks for five sequence tagging
 tasks, we present network architectures that produce both superior performance
 as well as are more stable with respect to the remaining hyperparameters.},
  author = {Reimers, Nils  and  Gurevych, Iryna},
- booktitle = {Proc. of EMNLP-2017},
+ booktitle = {Proc. of EMNLP},
  link = {https://www.aclweb.org/anthology/D17-1035},
  title = {Reporting Score Distributions Makes a Difference: Performance Study of LSTM-networks for Sequence Tagging},
  year = {2017}
@@ -1428,7 +1425,7 @@ as well as are more stable with respect to the remaining hyperparameters.},
 
 @inproceedings{ritter-EtAl:2011:EMNLP,
  author = {Ritter, Alan  and  Clark, Sam  and  Mausam  and  Etzioni, Oren},
- booktitle = {Proc. of EMNLP-2011},
+ booktitle = {Proc. of EMNLP},
  link = {http://www.aclweb.org/anthology/D11-1141},
  publisher = {ACL},
  title = {Named Entity Recognition in Tweets: An Experimental Study},
@@ -1437,7 +1434,7 @@ as well as are more stable with respect to the remaining hyperparameters.},
 
 @inproceedings{rush-EtAl:2010:EMNLP,
  author = {Rush, Alexander M  and  Sontag, David  and  Collins, Michael  and  Jaakkola, Tommi},
- booktitle = {Proc. of ACL-2010},
+ booktitle = {Proc. of ACL},
  title = {On Dual Decomposition and Linear Programming Relaxations for Natural Language Processing},
  year = {2010}
 }
@@ -1559,7 +1556,7 @@ Qun Liu},
 
 @inproceedings{sun-xu:2011:EMNLP,
  author = {Sun, Weiwei  and  Xu, Jia},
- booktitle = {EMNLP-2011},
+ booktitle = {Proc. of EMNLP},
  title = {Enhancing Chinese Word Segmentation Using Unlabeled Data},
  year = {2011}
 }
@@ -1824,7 +1821,7 @@ and Dayan, Peter},
 
 @inproceedings{zhang-blackwood-clark:2012:EACL2012,
  author = {Zhang, Yue  and  Blackwood, Graeme  and  Clark, Stephen},
- booktitle = {EACL-2012},
+ booktitle = {Proc. of EACL},
  title = {Syntax-Based Word Ordering Incorporating a Large-Scale Language Model},
  year = {2012}
 }
@@ -1838,7 +1835,7 @@ and Dayan, Peter},
 
 @inproceedings{zhang-clark:2007:ACLMain,
  author = {Zhang, Yue  and  Clark, Stephen},
- booktitle = {ACL-2007},
+ booktitle = {Proc. of ACL},
  title = {Chinese Segmentation with a Word-Based Perceptron Algorithm},
  year = {2007}
 }
@@ -1907,7 +1904,7 @@ Beam Search},
 
 @inproceedings{zhang-EtAl:2014:P14-12,
  author = {Zhang, Yuan  and  Lei, Tao  and  Barzilay, Regina  and  Jaakkola, Tommi  and  Globerson, Amir},
- booktitle = {ACL-2014},
+ booktitle = {Proc. of ACL},
  title = {Steps to Excellence: Simple Inference with Refined Scoring of Dependency Trees},
  year = {2014}
 }
@@ -1921,7 +1918,7 @@ Beam Search},
 
 @inproceedings{zhang-mcdonald:2012:EMNLP-CoNLL,
  author = {Zhang, Hao  and  McDonald, Ryan},
- booktitle = {Proc. of EMNLP-2012},
+ booktitle = {Proc. of EMNLP},
  title = {Generalized Higher-Order Dependency Parsing with Cube Pruning},
  year = {2012}
 }
