--- a/shortdb.bib
+++ b/shortdb.bib
@@ -1369,6 +1369,15 @@ An Exploration},
  year = {2011}
 }
 
+@inproceedings{luong-pham-manning:2015:EMNLP,
+ author = {Luong, Thang  and  Pham, Hieu  and  Manning, Christopher D.},
+ booktitle = {Proc. of EMNLP-2015},
+ link = {http://aclweb.org/anthology/D15-1166},
+ publisher = {ACL},
+ title = {Effective Approaches to Attention-based Neural Machine Translation},
+ year = {2015}
+}
+
 @inproceedings{ma-zhang-zhu:2014:P14-1,
  address = {Baltimore, Maryland},
  author = {Ma, Ji  and  Zhang, Yue  and  Zhu, Jingbo},
