--- a/tinydb.bib
+++ b/tinydb.bib
@@ -656,7 +656,6 @@ An Exploration},
 @inproceedings{gimpel-EtAl:2011:ACL-HLT2011,
  author = {Gimpel, Kevin  and  Schneider, Nathan  and  O'Connor, Brendan  and  Das, Dipanjan  and  Mills, Daniel  and  Eisenstein, Jacob  and  Heilman, Michael  and  Yogatama, Dani  and  Flanigan, Jeffrey  and  Smith, Noah A.},
  booktitle = {Proc. of ACL},
- publisher = {ACL},
  title = {Part-of-Speech Tagging for Twitter: Annotation, Features, and Experiments},
  year = {2011}
 }
@@ -726,7 +725,6 @@ performance than state-of-the-art methods.},
  author = {Gui, Tao  and  Zhang, Qi  and  Huang, Haoran  and  Peng, Minlong  and  Huang, Xuanjing},
  booktitle = {Proc. of EMNLP},
  link = {https://www.aclweb.org/anthology/D17-1256},
- publisher = {ACL},
  title = {Part-of-Speech Tagging for Twitter with Adversarial Neural Networks},
  year = {2017}
 }
@@ -881,7 +879,6 @@ target parsing models.},
 @inproceedings{kong-EtAl:2014:EMNLP2014,
  author = {Kong, Lingpeng  and  Schneider, Nathan  and  Swayamdipta, Swabha  and  Bhatia, Archna  and  Dyer, Chris  and  Smith, Noah A.},
  booktitle = {Proc. of EMNLP},
- publisher = {ACL},
  title = {A Dependency Parser for Tweets},
  year = {2014}
 }
@@ -941,7 +938,6 @@ target parsing models.},
  author = {Lample, Guillaume  and  Ballesteros, Miguel  and  Subramanian, Sandeep  and  Kawakami, Kazuya  and  Dyer, Chris},
  booktitle = {Proc. of NAACL},
  link = {http://www.aclweb.org/anthology/N16-1030},
- publisher = {ACL},
  title = {Neural Architectures for Named Entity Recognition},
  year = {2016}
 }
@@ -1045,11 +1041,18 @@ target parsing models.},
  year = {2005}
 }
 
+@inproceedings{luong-pham-manning:2015:EMNLP,
+ author = {Luong, Thang  and  Pham, Hieu  and  Manning, Christopher D.},
+ booktitle = {Proc. of EMNLP},
+ link = {http://aclweb.org/anthology/D15-1166},
+ title = {Effective Approaches to Attention-based Neural Machine Translation},
+ year = {2015}
+}
+
 @inproceedings{ma-hovy:2016:P16-1,
  author = {Ma, Xuezhe  and  Hovy, Eduard},
  booktitle = {Proc. of ACL},
  link = {http://www.aclweb.org/anthology/P16-1101},
- publisher = {ACL},
  title = {End-to-end Sequence Labeling via Bi-directional LSTM-CNNs-CRF},
  year = {2016}
 }
@@ -1257,7 +1260,6 @@ target parsing models.},
 @inproceedings{NIVRE16.348,
  author = {Joakim Nivre and Marie-Catherine de Marneffe and Filip Ginter and Yoav Goldberg and Jan Hajic and Christopher D. Manning and Ryan McDonald and Slav Petrov and Sampo Pyysalo and Natalia Silveira and Reut Tsarfaty and Daniel Zeman},
  booktitle = {Proc. of LREC 2016},
- publisher = {ELRA},
  title = {Universal Dependencies v1: A Multilingual Treebank Collection},
  year = {2016}
 }
@@ -1315,7 +1317,6 @@ target parsing models.},
 @inproceedings{owoputi-EtAl:2013:NAACL-HLT,
  author = {Owoputi, Olutobi  and  O'Connor, Brendan  and  Dyer, Chris  and  Gimpel, Kevin  and  Schneider, Nathan  and  Smith, Noah A.},
  booktitle = {Proc. of NAACL},
- publisher = {ACL},
  title = {Improved Part-of-Speech Tagging for Online Conversational Text with Word Clusters},
  year = {2013}
 }
@@ -1352,7 +1353,6 @@ target parsing models.},
 @inproceedings{PETROV12.274,
  author = {Slav Petrov and Dipanjan Das and Ryan McDonald},
  booktitle = {Proc. of LREC},
- publisher = {ELRA},
  title = {A Universal Part-of-Speech Tagset},
  year = {2012}
 }
@@ -1427,7 +1427,6 @@ as well as are more stable with respect to the remaining hyperparameters.},
  author = {Ritter, Alan  and  Clark, Sam  and  Mausam  and  Etzioni, Oren},
  booktitle = {Proc. of EMNLP},
  link = {http://www.aclweb.org/anthology/D11-1141},
- publisher = {ACL},
  title = {Named Entity Recognition in Tweets: An Experimental Study},
  year = {2011}
 }
@@ -1472,7 +1471,6 @@ as well as are more stable with respect to the remaining hyperparameters.},
  author = {Schneider, Nathan  and  O'Connor, Brendan  and  Saphra, Naomi  and  Bamman, David  and  Faruqui, Manaal  and  Smith, Noah A.  and  Dyer, Chris  and  Baldridge, Jason},
  booktitle = {Proc. of the 7th Linguistic Annotation Workshop and Interoperability with Discourse},
  link = {http://www.aclweb.org/anthology/W13-2307},
- publisher = {ACL},
  title = {A Framework for (Under)specifying Dependency Syntax without Overloading Annotators},
  year = {2013}
 }
@@ -1542,7 +1540,6 @@ Qun Liu},
 @inproceedings{straka-strakova:2017:K17-3,
  author = {Straka, Milan  and  Strakov\'{a}, Jana},
  booktitle = {Proc. of the CoNLL 2017 Shared Task: Multilingual Parsing from Raw Text to Universal Dependencies},
- publisher = {ACL},
  title = {Tokenizing, POS Tagging, Lemmatizing and Parsing UD 2.0 with UDPipe},
  year = {2017}
 }
@@ -1697,7 +1694,6 @@ Qun Liu},
  author = {Wang, Hongmin  and  Zhang, Yue  and  Chan, GuangYong Leonard  and  Yang, Jie  and  Chieu, Hai Leong},
  booktitle = {Proc. of ACL},
  link = {http://aclweb.org/anthology/P17-1159},
- publisher = {ACL},
  title = {Universal Dependencies Parsing for Colloquial Singaporean English},
  year = {2017}
 }
