--- a/db.bib
+++ b/db.bib
@@ -1419,6 +1419,18 @@ An Exploration},
  year = {2011}
 }
 
+@inproceedings{luong-pham-manning:2015:EMNLP,
+ address = {Lisbon, Portugal},
+ author = {Luong, Thang  and  Pham, Hieu  and  Manning, Christopher D.},
+ booktitle = {Proceedings of the 2015 Conference on Empirical Methods in Natural Language Processing},
+ link = {http://aclweb.org/anthology/D15-1166},
+ month = {September},
+ pages = {1412--1421},
+ publisher = {Association for Computational Linguistics},
+ title = {Effective Approaches to Attention-based Neural Machine Translation},
+ year = {2015}
+}
+
 @inproceedings{ma-zhang-zhu:2014:P14-1,
  address = {Baltimore, Maryland},
  author = {Ma, Ji  and  Zhang, Yue  and  Zhu, Jingbo},
