--- a/shortdb.bib
+++ b/shortdb.bib
@@ -236,6 +236,22 @@
  year = {1991}
 }
 
+@inproceedings{Bucilua:2006:MC:1150402.1150464,
+ acmid = {1150464},
+ author = {Bucilu\v{a}, Cristian and Caruana, Rich and Niculescu-Mizil, Alexandru},
+ booktitle = {Proc. of the 12th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+ doi = {10.1145/1150402.1150464},
+ isbn = {1-59593-339-5},
+ keyword = {model compression, supervised learning},
+ link = {http://doi.acm.org/10.1145/1150402.1150464},
+ location = {Philadelphia, PA, USA},
+ numpages = {7},
+ publisher = {ACM},
+ series = {KDD '06},
+ title = {Model Compression},
+ year = {2006}
+}
+
 @inproceedings{cai-yates:2013:ACL2013,
  author = {Cai, Qingqing  and  Yates, Alexander},
  booktitle = {Proc. of ACL-2013},
@@ -1606,6 +1622,17 @@ An Exploration},
  year = {2013}
 }
 
+@incollection{NIPS2014_5484,
+ author = {Ba, Jimmy and Caruana, Rich},
+ booktitle = {Advances in Neural Information Processing Systems 27},
+ editor = {Z. Ghahramani and M. Welling and C. Cortes and N. D. Lawrence and K. Q. Weinberger},
+ link = {http://papers.nips.cc/paper/5484-do-deep-nets-really-need-to-be-deep.pdf},
+ pages = {2654--2662},
+ publisher = {Curran Associates, Inc.},
+ title = {Do Deep Nets Really Need to be Deep?},
+ year = {2014}
+}
+
 @inproceedings{nivre-EtAl:2006:CoNLL-X,
  address = {New York City},
  author = {Nivre, Joakim  and  Hall, Johan  and  Nilsson, Jens  and  Eryi{\v g}it, G{\"u}l{\c s}en  and  Marinov, Svetoslav},
@@ -2297,6 +2324,15 @@ and Dayan, Peter},
  publisher = {Springer},
  title = {Reining in CCG chart realization},
  year = {2004}
+}
+
+@inproceedings{wiseman-rush:2016:EMNLP2016,
+ author = {Wiseman, Sam  and  Rush, Alexander M.},
+ booktitle = {Proc. of EMNLP-2016},
+ link = {https://aclweb.org/anthology/D16-1137},
+ publisher = {ACL},
+ title = {Sequence-to-Sequence Learning as Beam-Search Optimization},
+ year = {2016}
 }
 
 @inproceedings{wong-mooney:2006:HLT-NAACL06-Main,
