--- a/tinydb.bib
+++ b/tinydb.bib
@@ -145,6 +145,21 @@
  year = {1992}
 }
 
+@inproceedings{Bucilua:2006:MC:1150402.1150464,
+ acmid = {1150464},
+ author = {Bucilu\v{a}, Cristian and Caruana, Rich and Niculescu-Mizil, Alexandru},
+ booktitle = {Proc. of the 12th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+ doi = {10.1145/1150402.1150464},
+ isbn = {1-59593-339-5},
+ keyword = {model compression, supervised learning},
+ link = {http://doi.acm.org/10.1145/1150402.1150464},
+ location = {Philadelphia, PA, USA},
+ numpages = {7},
+ series = {KDD '06},
+ title = {Model Compression},
+ year = {2006}
+}
+
 @inproceedings{Cao:2007:LRP:1273496.1273513,
  acmid = {1273513},
  author = {Cao, Zhe and Qin, Tao and Liu, Tie-Yan and Tsai, Ming-Feng and Li, Hang},
@@ -1222,6 +1237,17 @@ target parsing models.},
  year = {2014}
 }
 
+@incollection{NIPS2014_5484,
+ author = {Ba, Jimmy and Caruana, Rich},
+ booktitle = {Advances in Neural Information Processing Systems 27},
+ editor = {Z. Ghahramani and M. Welling and C. Cortes and N. D. Lawrence and K. Q. Weinberger},
+ link = {http://papers.nips.cc/paper/5484-do-deep-nets-really-need-to-be-deep.pdf},
+ pages = {2654--2662},
+ publisher = {Curran Associates, Inc.},
+ title = {Do Deep Nets Really Need to be Deep?},
+ year = {2014}
+}
+
 @inproceedings{nivre-EtAl:2006:CoNLL-X,
  author = {Nivre, Joakim  and  Hall, Johan  and  Nilsson, Jens  and  Eryi{\v g}it, G{\"u}l{\c s}en  and  Marinov, Svetoslav},
  booktitle = {Proc. of CoNLL},
@@ -1743,6 +1769,14 @@ and Dayan, Peter},
  booktitle = {Natural Language Generation},
  title = {Reining in CCG chart realization},
  year = {2004}
+}
+
+@inproceedings{wiseman-rush:2016:EMNLP2016,
+ author = {Wiseman, Sam  and  Rush, Alexander M.},
+ booktitle = {Proc. of EMNLP},
+ link = {https://aclweb.org/anthology/D16-1137},
+ title = {Sequence-to-Sequence Learning as Beam-Search Optimization},
+ year = {2016}
 }
 
 @inproceedings{Wong:1996:CWS:992628.992665,
