--- a/tinydb.bib
+++ b/tinydb.bib
@@ -148,7 +148,7 @@
 @inproceedings{Bucilua:2006:MC:1150402.1150464,
  acmid = {1150464},
  author = {Bucilu\v{a}, Cristian and Caruana, Rich and Niculescu-Mizil, Alexandru},
- booktitle = {Proc. of the 12th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+ booktitle = {Proc. of KDD},
  doi = {10.1145/1150402.1150464},
  isbn = {1-59593-339-5},
  keyword = {model compression, supervised learning},
@@ -158,6 +158,14 @@
  series = {KDD '06},
  title = {Model Compression},
  year = {2006}
+}
+
+@inproceedings{buckman-ballesteros-dyer:2016:EMNLP2016,
+ author = {Buckman, Jacob  and  Ballesteros, Miguel  and  Dyer, Chris},
+ booktitle = {Proc. of EMNLP},
+ link = {https://aclweb.org/anthology/D16-1254},
+ title = {Transition-Based Dependency Parsing with Heuristic Backtracking},
+ year = {2016}
 }
 
 @inproceedings{Cao:2007:LRP:1273496.1273513,
@@ -1248,6 +1256,17 @@ target parsing models.},
  year = {2014}
 }
 
+@incollection{NIPS2015_5956,
+ author = {Bengio, Samy and Vinyals, Oriol and Jaitly, Navdeep and Shazeer, Noam},
+ booktitle = {Advances in Neural Information Processing Systems 28},
+ editor = {C. Cortes and N. D. Lawrence and D. D. Lee and M. Sugiyama and R. Garnett},
+ link = {http://papers.nips.cc/paper/5956-scheduled-sampling-for-sequence-prediction-with-recurrent-neural-networks.pdf},
+ pages = {1171--1179},
+ publisher = {Curran Associates, Inc.},
+ title = {Scheduled Sampling for Sequence Prediction with Recurrent Neural Networks},
+ year = {2015}
+}
+
 @inproceedings{nivre-EtAl:2006:CoNLL-X,
  author = {Nivre, Joakim  and  Hall, Johan  and  Nilsson, Jens  and  Eryi{\v g}it, G{\"u}l{\c s}en  and  Marinov, Svetoslav},
  booktitle = {Proc. of CoNLL},
@@ -1399,6 +1418,32 @@ target parsing models.},
  booktitle = {Proc. of NAACL},
  title = {A Linear-Time Transition System for Crossing Interval Trees},
  year = {2015}
+}
+
+@inproceedings{pmlr-v15-ross11a,
+ abstract = {Sequential prediction problems such as imitation learning, where future observations depend on previous predictions (actions), violate the common i.i.d. assumptions made in statistical learning. This leads to poor performance in theory and often in practice. Some recent approaches provide stronger guarantees in this setting, but remain somewhat unsatisfactory as they train either non-stationary or stochastic policies and require a large number of iterations. In this paper, we propose a new iterative algorithm, which trains a stationary deterministic policy, that can be seen as a no regret algorithm in an online learning setting. We show that any such no regret algorithm, combined with additional reduction assumptions, must find a policy with good performance under the distribution of observations it induces in such sequential settings. We demonstrate that this new approach outperforms previous approaches on two challenging imitation learning problems and a benchmark sequence labeling problem. [pdf]},
+ author = {Stephane Ross and Geoffrey Gordon and Drew Bagnell},
+ booktitle = {Proc. of the Fourteenth International Conference on Artificial Intelligence and Statistics},
+ editor = {Geoffrey Gordon and David Dunson and Miroslav Dudík},
+ link = {http://proceedings.mlr.press/v15/ross11a.html},
+ pdf = {http://proceedings.mlr.press/v15/ross11a/ross11a.pdf},
+ series = {Proceedings of Machine Learning Research},
+ title = {A Reduction of Imitation Learning and Structured Prediction to No-Regret Online Learning},
+ volume = {15},
+ year = {2011}
+}
+
+@inproceedings{pmlr-v9-ross10a,
+ abstract = {Imitation Learning, while applied successfully on many large real-world problems, is typically addressed as a standard supervised learning problem, where it is assumed the training and testing data are i.i.d..  This is not true in imitation learning as the learned policy influences the future test inputs (states) upon which it will be tested. We show that this leads to compounding errors and a regret bound that grows quadratically in the time horizon of the task. We propose two alternative algorithms for imitation learning where training occurs over several episodes of interaction. These two approaches share in common that the learner’s policy is slowly modified from executing the expert’s policy to the learned policy. We show that this leads to stronger performance guarantees and demonstrate the improved performance on two challenging problems: training a learner to play 1) a 3D racing game (Super Tux Kart) and 2) Mario Bros.; given input images from the games and corresponding actions taken by a human expert and near-optimal planner respectively.},
+ author = {Stephane Ross and Drew Bagnell},
+ booktitle = {Proc. of the Thirteenth International Conference on Artificial Intelligence and Statistics},
+ editor = {Yee Whye Teh and Mike Titterington},
+ link = {http://proceedings.mlr.press/v9/ross10a.html},
+ pdf = {http://proceedings.mlr.press/v9/ross10a/ross10a.pdf},
+ series = {Proceedings of Machine Learning Research},
+ title = {Efficient Reductions for Imitation Learning},
+ volume = {9},
+ year = {2010}
 }
 
 @inproceedings{ratinov-roth:2009:CoNLL,
