--- a/db.bib
+++ b/db.bib
@@ -2322,6 +2322,18 @@ Qun Liu},
  year = {2015}
 }
 
+@inproceedings{wehbe-EtAl:2014:EMNLP2014,
+ address = {Doha, Qatar},
+ author = {Wehbe, Leila  and  Vaswani, Ashish  and  Knight, Kevin  and  Mitchell, Tom},
+ booktitle = {Proceedings of the 2014 Conference on Empirical Methods in Natural Language Processing (EMNLP)},
+ link = {http://www.aclweb.org/anthology/D14-1030},
+ month = {October},
+ pages = {233--243},
+ publisher = {Association for Computational Linguistics},
+ title = {Aligning context-based statistical models of language with brain activity during reading},
+ year = {2014}
+}
+
 @inproceedings{white-rajkumar:2009:EMNLP,
  address = {Singapore},
  author = {White, Michael  and  Rajkumar, Rajakrishnan},
