--- a/tinydb.bib
+++ b/tinydb.bib
@@ -2,7 +2,6 @@
  author = {Agarwal, Shivani and Roth, Dan},
  booktitle = {Learning Theory},
  doi = {10.1007/11503415_2},
- editor = {Auer, Peter and Meir, Ron},
  isbn = {978-3-540-26556-6},
  language = {English},
  series = {Lecture Notes in Computer Science},
@@ -155,7 +154,6 @@
  link = {http://doi.acm.org/10.1145/1150402.1150464},
  location = {Philadelphia, PA, USA},
  numpages = {7},
- series = {KDD '06},
  title = {Model Compression},
  year = {2006}
 }
@@ -175,7 +173,6 @@
  doi = {10.1145/1273496.1273513},
  isbn = {978-1-59593-793-3},
  location = {Corvalis, Oregon, USA},
- series = {ICML '07},
  title = {Learning to Rank: From Pairwise Approach to Listwise Approach},
  year = {2007}
 }
@@ -1018,7 +1015,6 @@ target parsing models.},
  author = {Liu, Yijia and Che, Wanxiang and Liu, Ting},
  booktitle = {Chinese Computational Linguistics and Natural Language Processing Based on Naturally Annotated Big Data},
  doi = {10.1007/978-3-642-41491-6_6},
- editor = {Sun, Maosong and Zhang, Min and Lin, Dekang and Wang, Haifeng},
  isbn = {978-3-642-41490-9},
  keyword = {Brown clustering; Chinese word segmentation; semi-supervised learning},
  language = {English},
@@ -1183,7 +1179,6 @@ target parsing models.},
  author = {McDonald, Ryan and Lerman, Kevin and Pereira, Fernando},
  booktitle = {Proc. of CoNLL-2006},
  location = {New York City, New York},
- series = {CoNLL-X '06},
  title = {Multilingual Dependency Analysis with a Two-stage Discriminative Parser},
  year = {2006}
 }
@@ -1222,7 +1217,6 @@ target parsing models.},
 @incollection{NIPS2001_2089,
  author = {Michael Collins and Nigel Duffy},
  booktitle = {NIPS},
- editor = {T.G. Dietterich and S. Becker and Z. Ghahramani},
  title = {Convolution Kernels for Natural Language},
  year = {2002}
 }
@@ -1236,33 +1230,27 @@ target parsing models.},
 
 @incollection{NIPS2014_5346,
  author = {Sutskever, Ilya and Vinyals, Oriol and Le, Quoc V},
- booktitle = {Advances in Neural Information Processing Systems 27},
- editor = {Z. Ghahramani and M. Welling and C. Cortes and N. D. Lawrence and K. Q. Weinberger},
+ booktitle = {NIPS 27},
  link = {http://papers.nips.cc/paper/5346-sequence-to-sequence-learning-with-neural-networks.pdf},
  pages = {3104--3112},
- publisher = {Curran Associates, Inc.},
  title = {Sequence to Sequence Learning with Neural Networks},
  year = {2014}
 }
 
 @incollection{NIPS2014_5484,
  author = {Ba, Jimmy and Caruana, Rich},
- booktitle = {Advances in Neural Information Processing Systems 27},
- editor = {Z. Ghahramani and M. Welling and C. Cortes and N. D. Lawrence and K. Q. Weinberger},
+ booktitle = {NIPS 27},
  link = {http://papers.nips.cc/paper/5484-do-deep-nets-really-need-to-be-deep.pdf},
  pages = {2654--2662},
- publisher = {Curran Associates, Inc.},
  title = {Do Deep Nets Really Need to be Deep?},
  year = {2014}
 }
 
 @incollection{NIPS2015_5956,
  author = {Bengio, Samy and Vinyals, Oriol and Jaitly, Navdeep and Shazeer, Noam},
- booktitle = {Advances in Neural Information Processing Systems 28},
- editor = {C. Cortes and N. D. Lawrence and D. D. Lee and M. Sugiyama and R. Garnett},
+ booktitle = {NIPS 28},
  link = {http://papers.nips.cc/paper/5956-scheduled-sampling-for-sequence-prediction-with-recurrent-neural-networks.pdf},
  pages = {1171--1179},
- publisher = {Curran Associates, Inc.},
  title = {Scheduled Sampling for Sequence Prediction with Recurrent Neural Networks},
  year = {2015}
 }
@@ -1405,7 +1393,6 @@ target parsing models.},
 @inproceedings{PETROV12.274.L12-1115,
  author = {Slav Petrov and Dipanjan Das and Ryan McDonald},
  booktitle = {Proc. of LREC},
- editor = {Nicoletta Calzolari and Khalid Choukri and Thierry Declerck and Mehmet U\u{g}ur Do\u{g}an and Bente Maegaard and Joseph Mariani and Jan Odijk and Stelios Piperidis},
  isbn = {978-2-9517408-7-7},
  language = {English},
  note = {ACL Anthology Identifier: L12-1115},
@@ -1423,11 +1410,9 @@ target parsing models.},
 @inproceedings{pmlr-v15-ross11a,
  abstract = {Sequential prediction problems such as imitation learning, where future observations depend on previous predictions (actions), violate the common i.i.d. assumptions made in statistical learning. This leads to poor performance in theory and often in practice. Some recent approaches provide stronger guarantees in this setting, but remain somewhat unsatisfactory as they train either non-stationary or stochastic policies and require a large number of iterations. In this paper, we propose a new iterative algorithm, which trains a stationary deterministic policy, that can be seen as a no regret algorithm in an online learning setting. We show that any such no regret algorithm, combined with additional reduction assumptions, must find a policy with good performance under the distribution of observations it induces in such sequential settings. We demonstrate that this new approach outperforms previous approaches on two challenging imitation learning problems and a benchmark sequence labeling problem. [pdf]},
  author = {Stephane Ross and Geoffrey Gordon and Drew Bagnell},
- booktitle = {Proc. of the Fourteenth International Conference on Artificial Intelligence and Statistics},
- editor = {Geoffrey Gordon and David Dunson and Miroslav Dudík},
+ booktitle = {Proc. of AISTATS},
  link = {http://proceedings.mlr.press/v15/ross11a.html},
  pdf = {http://proceedings.mlr.press/v15/ross11a/ross11a.pdf},
- series = {Proceedings of Machine Learning Research},
  title = {A Reduction of Imitation Learning and Structured Prediction to No-Regret Online Learning},
  volume = {15},
  year = {2011}
@@ -1436,11 +1421,9 @@ target parsing models.},
 @inproceedings{pmlr-v9-ross10a,
  abstract = {Imitation Learning, while applied successfully on many large real-world problems, is typically addressed as a standard supervised learning problem, where it is assumed the training and testing data are i.i.d..  This is not true in imitation learning as the learned policy influences the future test inputs (states) upon which it will be tested. We show that this leads to compounding errors and a regret bound that grows quadratically in the time horizon of the task. We propose two alternative algorithms for imitation learning where training occurs over several episodes of interaction. These two approaches share in common that the learner’s policy is slowly modified from executing the expert’s policy to the learned policy. We show that this leads to stronger performance guarantees and demonstrate the improved performance on two challenging problems: training a learner to play 1) a 3D racing game (Super Tux Kart) and 2) Mario Bros.; given input images from the games and corresponding actions taken by a human expert and near-optimal planner respectively.},
  author = {Stephane Ross and Drew Bagnell},
- booktitle = {Proc. of the Thirteenth International Conference on Artificial Intelligence and Statistics},
- editor = {Yee Whye Teh and Mike Titterington},
+ booktitle = {Proc. of AISTATS},
  link = {http://proceedings.mlr.press/v9/ross10a.html},
  pdf = {http://proceedings.mlr.press/v9/ross10a/ross10a.pdf},
- series = {Proceedings of Machine Learning Research},
  title = {Efficient Reductions for Imitation Learning},
  volume = {9},
  year = {2010}
@@ -1558,7 +1541,6 @@ as well as are more stable with respect to the remaining hyperparameters.},
  author = {Shi, Yanxin and Wang, Mengqiu},
  booktitle = {Proc. of IJCAI},
  location = {Hyderabad, India},
- series = {IJCAI'07},
  title = {A Dual-layer CRFs Based Joint Decoding Method for Cascaded Segmentation and Labeling Tasks},
  year = {2007}
 }
@@ -1588,7 +1570,6 @@ as well as are more stable with respect to the remaining hyperparameters.},
 @inproceedings{SONG12.973.L12-1580,
  author = {Yan Song and Fei Xia},
  booktitle = {Proc. of LREC},
- editor = {Nicoletta Calzolari and Khalid Choukri and Thierry Declerck and Mehmet U\u{g}ur Do\u{g}an and Bente Maegaard and Joseph Mariani and Jan Odijk and Stelios Piperidis},
  isbn = {978-2-9517408-7-7},
  language = {English},
  note = {ACL Anthology Identifier: L12-1580},
@@ -1728,7 +1709,6 @@ Qun Liu},
  booktitle = {Proc. of the NAACL '03},
  doi = {10.3115/1073445.1073478},
  location = {Edmonton, Canada},
- series = {NAACL '03},
  title = {Feature-rich Part-of-speech Tagging with a Cyclic Dependency Network},
  year = {2003}
 }
@@ -1788,6 +1768,14 @@ and Dayan, Peter},
  year = {1992}
 }
 
+@inproceedings{wehbe-EtAl:2014:EMNLP2014,
+ author = {Wehbe, Leila  and  Vaswani, Ashish  and  Knight, Kevin  and  Mitchell, Tom},
+ booktitle = {Proc. of EMNLP},
+ link = {http://www.aclweb.org/anthology/D14-1030},
+ title = {Aligning context-based statistical models of language with brain activity during reading},
+ year = {2014}
+}
+
 @inproceedings{weiss-EtAl:2015:ACL-IJCNLP,
  author = {Weiss, David  and  Alberti, Chris  and  Collins, Michael  and  Petrov, Slav},
  booktitle = {Proc. of ACL},
@@ -1830,7 +1818,6 @@ and Dayan, Peter},
  booktitle = {Proc. of the 16th Conference on Computational Linguistics - Volume 1},
  doi = {10.3115/992628.992665},
  location = {Copenhagen, Denmark},
- series = {COLING '96},
  title = {Chinese Word Segmentation Based on Maximum Matching and Word Binding Force},
  year = {1996}
 }
@@ -1862,7 +1849,6 @@ and Dayan, Peter},
  booktitle = {Proc. of the Second SIGHAN Workshop on Chinese Language Processing - Volume 17},
  doi = {10.3115/1119250.1119278},
  location = {Sapporo, Japan},
- series = {SIGHAN '03},
  title = {Chinese Word Segmentation As LMR Tagging},
  year = {2003}
 }
