--- a/db.bib
+++ b/db.bib
@@ -470,6 +470,27 @@
  year = {2006}
 }
 
+@inproceedings{damonte-cohen-satta:2017:EACLlong,
+ abstract = {Abstract Meaning Representation (AMR) is a semantic representation for natural
+language that embeds annotations related to traditional tasks such as named
+entity recognition, semantic role labeling, word sense disambiguation and
+co-reference resolution. We describe a transition-based parser for AMR that
+parses sentences left-to-right, in linear time. We further propose a test-suite
+that assesses specific subtasks that are helpful in comparing AMR parsers, and
+show that our parser is competitive with the state of the art on the LDC2015E86
+dataset and that it outperforms state-of-the-art parsers for recovering named
+entities and handling polarity.},
+ address = {Valencia, Spain},
+ author = {Damonte, Marco  and  Cohen, Shay B.  and  Satta, Giorgio},
+ booktitle = {Proceedings of the 15th Conference of the European Chapter of the Association for Computational Linguistics: Volume 1, Long Papers},
+ link = {http://www.aclweb.org/anthology/E17-1051},
+ month = {April},
+ pages = {536--546},
+ publisher = {Association for Computational Linguistics},
+ title = {An Incremental Parser for Abstract Meaning Representation},
+ year = {2017}
+}
+
 @inproceedings{daume05search,
  address = {Whistler, Canada},
  author = {Hal {Daum\'e III} and John Langford and Daniel Marcu},
