--- a/tinydb.bib
+++ b/tinydb.bib
@@ -287,6 +287,23 @@
  year = {2006}
 }
 
+@inproceedings{damonte-cohen-satta:2017:EACLlong,
+ abstract = {Abstract Meaning Representation (AMR) is a semantic representation for natural
+language that embeds annotations related to traditional tasks such as named
+entity recognition, semantic role labeling, word sense disambiguation and
+co-reference resolution. We describe a transition-based parser for AMR that
+parses sentences left-to-right, in linear time. We further propose a test-suite
+that assesses specific subtasks that are helpful in comparing AMR parsers, and
+show that our parser is competitive with the state of the art on the LDC2015E86
+dataset and that it outperforms state-of-the-art parsers for recovering named
+entities and handling polarity.},
+ author = {Damonte, Marco  and  Cohen, Shay B.  and  Satta, Giorgio},
+ booktitle = {Proc. of EACL},
+ link = {http://www.aclweb.org/anthology/E17-1051},
+ title = {An Incremental Parser for Abstract Meaning Representation},
+ year = {2017}
+}
+
 @inproceedings{daume05search,
  author = {Hal {Daum\'e III} and John Langford and Daniel Marcu},
  booktitle = {NIPS Workshop on ASLTSP},
