--- a/tinydb.bib
+++ b/tinydb.bib
@@ -43,6 +43,14 @@
  year = {2006}
 }
 
+@inproceedings{artzi-lee-zettlemoyer:2015:EMNLP,
+ author = {Artzi, Yoav  and  Lee, Kenton  and  Zettlemoyer, Luke},
+ booktitle = {Proc. of EMNLP},
+ link = {http://aclweb.org/anthology/D15-1198},
+ title = {Broad-coverage CCG Semantic Parsing with AMR},
+ year = {2015}
+}
+
 @inproceedings{attardi:2006:CoNLL-X,
  author = {Attardi, Giuseppe},
  booktitle = {Proc. of CoNLL},
