--- a/db.bib
+++ b/db.bib
@@ -868,6 +868,18 @@ An Exploration},
  year = {2008}
 }
 
+@inproceedings{flanigan-EtAl:2014:P14-1,
+ address = {Baltimore, Maryland},
+ author = {Flanigan, Jeffrey  and  Thomson, Sam  and  Carbonell, Jaime  and  Dyer, Chris  and  Smith, Noah A.},
+ booktitle = {Proceedings of the 52nd Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+ link = {http://www.aclweb.org/anthology/P14-1134},
+ month = {June},
+ pages = {1426--1436},
+ publisher = {Association for Computational Linguistics},
+ title = {A Discriminative Graph-Based Parser for the Abstract Meaning Representation},
+ year = {2014}
+}
+
 @inproceedings{gao-guzman-vogel:2010:PAPERS,
  address = {Beijing, China},
  author = {Gao, Qin  and  Guzman, Francisco  and  Vogel, Stephan},
