--- a/shortdb.bib
+++ b/shortdb.bib
@@ -770,6 +770,15 @@ An Exploration},
  year = {2008}
 }
 
+@inproceedings{flanigan-EtAl:2014:P14-1,
+ author = {Flanigan, Jeffrey  and  Thomson, Sam  and  Carbonell, Jaime  and  Dyer, Chris  and  Smith, Noah A.},
+ booktitle = {Proc. of ACL-2014},
+ link = {http://www.aclweb.org/anthology/P14-1134},
+ publisher = {ACL},
+ title = {A Discriminative Graph-Based Parser for the Abstract Meaning Representation},
+ year = {2014}
+}
+
 @inproceedings{gao-guzman-vogel:2010:PAPERS,
  author = {Gao, Qin  and  Guzman, Francisco  and  Vogel, Stephan},
  booktitle = {Proc. of Coling 2010},
