--- a/tinydb.bib
+++ b/tinydb.bib
@@ -661,6 +661,14 @@ An Exploration},
  year = {2010}
 }
 
+@inproceedings{flanigan-EtAl:2014:P14-1,
+ author = {Flanigan, Jeffrey  and  Thomson, Sam  and  Carbonell, Jaime  and  Dyer, Chris  and  Smith, Noah A.},
+ booktitle = {Proc. of ACL},
+ link = {http://www.aclweb.org/anthology/P14-1134},
+ title = {A Discriminative Graph-Based Parser for the Abstract Meaning Representation},
+ year = {2014}
+}
+
 @article{Frnay2014ClassificationIT,
  author = {Beno{\^i}t Fr{\'e}nay and Michel Verleysen},
  journal = {IEEE Transactions on Neural Networks and Learning Systems},
