--- a/db.bib
+++ b/db.bib
@@ -880,6 +880,25 @@ An Exploration},
  year = {2014}
 }
 
+@inproceedings{foland-martin:2017:Long,
+ abstract = {We present a system which parses sentences into Abstract Meaning
+Representations, improving state-of-the-art results for this task by more than
+5%.  AMR graphs represent semantic content using linguistic properties such
+as semantic roles, coreference, negation, and more.  The AMR parser does not
+rely on a syntactic pre-parse, or heavily engineered features, and uses five
+recurrent neural networks as the key architectural components for inferring AMR
+graphs.},
+ address = {Vancouver, Canada},
+ author = {Foland, William  and  Martin, James H.},
+ booktitle = {Proceedings of the 55th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+ link = {http://aclweb.org/anthology/P17-1043},
+ month = {July},
+ pages = {463--472},
+ publisher = {Association for Computational Linguistics},
+ title = {Abstract Meaning Representation Parsing using LSTM Recurrent Neural Networks},
+ year = {2017}
+}
+
 @inproceedings{gao-guzman-vogel:2010:PAPERS,
  address = {Beijing, China},
  author = {Gao, Qin  and  Guzman, Francisco  and  Vogel, Stephan},
