--- a/tinydb.bib
+++ b/tinydb.bib
@@ -669,6 +669,21 @@ An Exploration},
  year = {2014}
 }
 
+@inproceedings{foland-martin:2017:Long,
+ abstract = {We present a system which parses sentences into Abstract Meaning
+Representations, improving state-of-the-art results for this task by more than
+5%.  AMR graphs represent semantic content using linguistic properties such
+as semantic roles, coreference, negation, and more.  The AMR parser does not
+rely on a syntactic pre-parse, or heavily engineered features, and uses five
+recurrent neural networks as the key architectural components for inferring AMR
+graphs.},
+ author = {Foland, William  and  Martin, James H.},
+ booktitle = {Proc. of ACL},
+ link = {http://aclweb.org/anthology/P17-1043},
+ title = {Abstract Meaning Representation Parsing using LSTM Recurrent Neural Networks},
+ year = {2017}
+}
+
 @article{Frnay2014ClassificationIT,
  author = {Beno{\^i}t Fr{\'e}nay and Michel Verleysen},
  journal = {IEEE Transactions on Neural Networks and Learning Systems},
