--- a/db.bib
+++ b/db.bib
@@ -1974,6 +1974,18 @@ graphs.},
  year = {2010}
 }
 
+@inproceedings{pourdamghani-EtAl:2014:EMNLP2014,
+ address = {Doha, Qatar},
+ author = {Pourdamghani, Nima  and  Gao, Yang  and  Hermjakob, Ulf  and  Knight, Kevin},
+ booktitle = {Proceedings of the 2014 Conference on Empirical Methods in Natural Language Processing (EMNLP)},
+ link = {http://www.aclweb.org/anthology/D14-1048},
+ month = {October},
+ pages = {425--429},
+ publisher = {Association for Computational Linguistics},
+ title = {Aligning English Strings with Abstract Meaning Representation Graphs},
+ year = {2014}
+}
+
 @inproceedings{ratinov-roth:2009:CoNLL,
  address = {Boulder, Colorado},
  author = {Ratinov, Lev  and  Roth, Dan},
