--- a/shortdb.bib
+++ b/shortdb.bib
@@ -1726,6 +1726,15 @@ graphs.},
  year = {2010}
 }
 
+@inproceedings{pourdamghani-EtAl:2014:EMNLP2014,
+ author = {Pourdamghani, Nima  and  Gao, Yang  and  Hermjakob, Ulf  and  Knight, Kevin},
+ booktitle = {Proc. of EMNLP-2014},
+ link = {http://www.aclweb.org/anthology/D14-1048},
+ publisher = {ACL},
+ title = {Aligning English Strings with Abstract Meaning Representation Graphs},
+ year = {2014}
+}
+
 @inproceedings{ratinov-roth:2009:CoNLL,
  author = {Ratinov, Lev  and  Roth, Dan},
  booktitle = {CoNLL-2009},
