--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1477,6 +1477,14 @@ target parsing models.},
  year = {2010}
 }
 
+@inproceedings{pourdamghani-EtAl:2014:EMNLP2014,
+ author = {Pourdamghani, Nima  and  Gao, Yang  and  Hermjakob, Ulf  and  Knight, Kevin},
+ booktitle = {Proc. of EMNLP},
+ link = {http://www.aclweb.org/anthology/D14-1048},
+ title = {Aligning English Strings with Abstract Meaning Representation Graphs},
+ year = {2014}
+}
+
 @inproceedings{ratinov-roth:2009:CoNLL,
  author = {Ratinov, Lev  and  Roth, Dan},
  booktitle = {Proc. of CoNLL},
