--- a/db.bib
+++ b/db.bib
@@ -1433,6 +1433,18 @@ graphs.},
  year = {2014}
 }
 
+@inproceedings{liu-EtAl:2015:NAACL-HLT3,
+ address = {Denver, Colorado},
+ author = {Liu, Fei  and  Flanigan, Jeffrey  and  Thomson, Sam  and  Sadeh, Norman  and  Smith, Noah A.},
+ booktitle = {Proceedings of the 2015 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies},
+ link = {http://www.aclweb.org/anthology/N15-1114},
+ month = {May--June},
+ pages = {1077--1086},
+ publisher = {Association for Computational Linguistics},
+ title = {Toward Abstractive Summarization Using Semantic Representations},
+ year = {2015}
+}
+
 @inproceedings{liu-liu-lin:2005:ACL,
  address = {Ann Arbor, Michigan},
  author = {Liu, Yang  and  Liu, Qun  and  Lin, Shouxun},
