--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1072,6 +1072,14 @@ target parsing models.},
  year = {2013}
 }
 
+@inproceedings{liu-EtAl:2015:NAACL-HLT3,
+ author = {Liu, Fei  and  Flanigan, Jeffrey  and  Thomson, Sam  and  Sadeh, Norman  and  Smith, Noah A.},
+ booktitle = {Proc. of NAACL},
+ link = {http://www.aclweb.org/anthology/N15-1114},
+ title = {Toward Abstractive Summarization Using Semantic Representations},
+ year = {2015}
+}
+
 @inproceedings{liu-liu-lin:2005:ACL,
  author = {Liu, Yang  and  Liu, Qun  and  Lin, Shouxun},
  booktitle = {Proc. of ACL},
