--- a/shortdb.bib
+++ b/shortdb.bib
@@ -1233,6 +1233,15 @@ graphs.},
  year = {2014}
 }
 
+@inproceedings{liu-EtAl:2015:NAACL-HLT3,
+ author = {Liu, Fei  and  Flanigan, Jeffrey  and  Thomson, Sam  and  Sadeh, Norman  and  Smith, Noah A.},
+ booktitle = {Proc. of NAACL-2015},
+ link = {http://www.aclweb.org/anthology/N15-1114},
+ publisher = {ACL},
+ title = {Toward Abstractive Summarization Using Semantic Representations},
+ year = {2015}
+}
+
 @inproceedings{liu-liu-lin:2005:ACL,
  author = {Liu, Yang  and  Liu, Qun  and  Lin, Shouxun},
  booktitle = {Proc. of ACL'05},
