--- a/db.bib
+++ b/db.bib
@@ -1851,6 +1851,18 @@ graphs.},
  year = {1999}
 }
 
+@inproceedings{pan-EtAl:2015:NAACL-HLT,
+ address = {Denver, Colorado},
+ author = {Pan, Xiaoman  and  Cassidy, Taylor  and  Hermjakob, Ulf  and  Ji, Heng  and  Knight, Kevin},
+ booktitle = {Proceedings of the 2015 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies},
+ link = {http://www.aclweb.org/anthology/N15-1119},
+ month = {May--June},
+ pages = {1130--1139},
+ publisher = {Association for Computational Linguistics},
+ title = {Unsupervised Entity Linking with Abstract Meaning Representation},
+ year = {2015}
+}
+
 @inproceedings{papineni-EtAl:2002:ACL,
  address = {Philadelphia, Pennsylvania, USA},
  author = {Kishore Papineni  and  Salim Roukos  and  Todd Ward  and  Wei-Jing Zhu},
