--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1410,6 +1410,14 @@ target parsing models.},
  year = {2013}
 }
 
+@inproceedings{pan-EtAl:2015:NAACL-HLT,
+ author = {Pan, Xiaoman  and  Cassidy, Taylor  and  Hermjakob, Ulf  and  Ji, Heng  and  Knight, Kevin},
+ booktitle = {Proc. of NAACL},
+ link = {http://www.aclweb.org/anthology/N15-1119},
+ title = {Unsupervised Entity Linking with Abstract Meaning Representation},
+ year = {2015}
+}
+
 @inproceedings{papineni-EtAl:2002:ACL,
  author = {Kishore Papineni  and  Salim Roukos  and  Todd Ward  and  Wei-Jing Zhu},
  booktitle = {Proc. of ACL},
