--- a/shortdb.bib
+++ b/shortdb.bib
@@ -1630,6 +1630,15 @@ graphs.},
  year = {1999}
 }
 
+@inproceedings{pan-EtAl:2015:NAACL-HLT,
+ author = {Pan, Xiaoman  and  Cassidy, Taylor  and  Hermjakob, Ulf  and  Ji, Heng  and  Knight, Kevin},
+ booktitle = {Proc. of NAACL-2015},
+ link = {http://www.aclweb.org/anthology/N15-1119},
+ publisher = {ACL},
+ title = {Unsupervised Entity Linking with Abstract Meaning Representation},
+ year = {2015}
+}
+
 @inproceedings{papineni-EtAl:2002:ACL,
  author = {Kishore Papineni  and  Salim Roukos  and  Todd Ward  and  Wei-Jing Zhu},
  booktitle = {Proc. of ACL-2002},
