--- a/db.bib
+++ b/db.bib
@@ -2398,6 +2398,18 @@ Qun Liu},
  year = {2011}
 }
 
+@inproceedings{wang-xue-pradhan:2015:ACL-IJCNLP,
+ address = {Beijing, China},
+ author = {Wang, Chuan  and  Xue, Nianwen  and  Pradhan, Sameer},
+ booktitle = {Proceedings of the 53rd Annual Meeting of the Association for Computational Linguistics and the 7th International Joint Conference on Natural Language Processing (Volume 2: Short Papers)},
+ link = {http://www.aclweb.org/anthology/P15-2141},
+ month = {July},
+ pages = {857--862},
+ publisher = {Association for Computational Linguistics},
+ title = {Boosting Transition-based AMR Parsing with Refined Actions and Auxiliary Analyzers},
+ year = {2015}
+}
+
 @inproceedings{watanabe-sumita:2015:ACL-IJCNLP,
  address = {Beijing, China},
  author = {Watanabe, Taro  and  Sumita, Eiichiro},
