--- a/shortdb.bib
+++ b/shortdb.bib
@@ -2101,6 +2101,15 @@ Qun Liu},
  year = {2011}
 }
 
+@inproceedings{wang-xue-pradhan:2015:ACL-IJCNLP,
+ author = {Wang, Chuan  and  Xue, Nianwen  and  Pradhan, Sameer},
+ booktitle = {Proc. of ACL-2015},
+ link = {http://www.aclweb.org/anthology/P15-2141},
+ publisher = {ACL},
+ title = {Boosting Transition-based AMR Parsing with Refined Actions and Auxiliary Analyzers},
+ year = {2015}
+}
+
 @inproceedings{watanabe-sumita:2015:ACL-IJCNLP,
  author = {Watanabe, Taro  and  Sumita, Eiichiro},
  booktitle = {Proc. of IJCNLP-2015},
