--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1821,6 +1821,14 @@ Qun Liu},
  year = {2017}
 }
 
+@inproceedings{wang-xue-pradhan:2015:ACL-IJCNLP,
+ author = {Wang, Chuan  and  Xue, Nianwen  and  Pradhan, Sameer},
+ booktitle = {Proc. of ACL},
+ link = {http://www.aclweb.org/anthology/P15-2141},
+ title = {Boosting Transition-based AMR Parsing with Refined Actions and Auxiliary Analyzers},
+ year = {2015}
+}
+
 @inproceedings{wang-xue-pradhan:2015:NAACL-HLT,
  author = {Wang, Chuan  and  Xue, Nianwen  and  Pradhan, Sameer},
  booktitle = {Proc. of NAACL},
